# pypopcat

./: README.md  pyproject.toml
pypopcat/: __init__.py  cmd.py  constants.py  emit.py
tests/: test_pypopcat.py
